# wmd-relax

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  cache.h  emd.h  emd_approx_relaxed.h  emd_approx_relaxed.hh  emd_relaxed.h  python.cc  setup.py  spacy_example.py  test.py
doc/: Doxyfile  Makefile  README.md  conf.py  index.rst  make.bat
doc/wmd/: modules.rst  wmd.rst
wmd/: __init__.py
